--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
@@ -14,18 +14,18 @@
             <p>{% trans "You can edit the rights you want to give to the future users:" %}</p>
             <ul class="inline-padding">
                 <li class="li-with-disc">
-                    {% blocktrans %}
+                    {% blocktrans trimmed %}
                     <strong>Read-only user</strong>: the read-only user can only consult
                     the evaluations, he cannot create, edit or delete one.
                     {% endblocktrans %}
                 </li>
                 <li class="li-with-disc">
-                    {% blocktrans %}
+                    {% blocktrans trimmed %}
                     <strong>Editor</strong>: the editor can create, modify and delete evaluations.
                     {% endblocktrans %}
                 </li>
                 <li class="li-with-disc">
-                    {% blocktrans %}
+                    {% blocktrans trimmed %}
                     <strong>Admin</strong>: the admin user can create, modify and delete evaluations and members.
                     {% endblocktrans %}
                 </li>
