--- a/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
@@ -9,7 +9,7 @@
         <button class="close" data-dismiss="modal" type="button">&times;</button>
     </div>
     <div class="modal-body-delete">
-        <p>{% blocktrans %}
+        <p>{% blocktrans trimmed %}
             The user will not be able to consult the evaluations anymore. You may also edit his role within the
             organisation to limit the actions he can take.
             {% endblocktrans %}
