--- a/platform_code/assessment/templates/assessment/upgrade-modal.html
+++ b/platform_code/assessment/templates/assessment/upgrade-modal.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="modal-body">
-    <p>{% blocktrans %}
+    <p>{% blocktrans trimmed %}
         Do you want to upgrade your evaluation to the latest version? Your answers and your notes will
         be transferred to the new evaluation. This evaluation won't be deleted by the process.
        {% endblocktrans %}
