--- a/platform_code/home/templates/home/homepage.html
+++ b/platform_code/home/templates/home/homepage.html
@@ -16,7 +16,7 @@
 <div class="row two-columns-adapted">
     <div class="column center-content">
         <h1 class="center">Substra Assessment</h1>
-        <p class="margin-50">{% blocktrans %}
+        <p class="margin-50">{% blocktrans trimmed %}
             Are you sensitive to the notion of responsible and trustworthy data science
             practices? Substra Assessment is a self-assessment and self-training tool: assess your organisation's level
             of maturity now and access numerous technical references to increase your competence.
@@ -45,7 +45,7 @@
         <img alt="image" class="img-fluid d-block mx-auto margin-50 image-max-350"
              src="{% static 'image/Illustration_10.png' %}">
         <p class="margin-150">
-            {% blocktrans %}
+            {% blocktrans trimmed %}
             New technical and organisational solutions are essential to provide a framework
             of trust that is lacking today and to make possible new, promising and secure collaborations between
             companies, public institutions and citizens.
@@ -57,7 +57,7 @@
     </div>
     <div class="column center-content">
         <p class="margin-50">
-            {% blocktrans %}
+            {% blocktrans trimmed %}
             A new space is emerging at the crossroads between the AI expansion in
             organisations and public concerns about private data, transparency and robustness of algorithms. These are
             two powerful trends that are already beginning to collide. How can they be reconciled and combined
@@ -67,7 +67,7 @@
         <img alt="image" class="img-fluid d-block mx-auto margin-150 image-max-350"
              src="{% static 'image/Illustration_7.png' %}">
         <p class="margin-150">
-            {% blocktrans %}
+            {% blocktrans trimmed %}
             Based on an open and participative approach that we initiated in mid-2019 and
             described in
             {% endblocktrans %}
@@ -75,7 +75,7 @@
                target="_blank">
                 {% trans "this article" %}
             </a>
-            {% blocktrans %}
+            {% blocktrans trimmed %}
             , we have developed a repository of risks and
             good practices to promote responsible and trustworthy data science. It has given rise to a self-assessment
             tool accompanied by numerous technical resources.
@@ -100,7 +100,7 @@
         <img alt="image" class="centered-image middle-width" src="{% static 'image/picto_homepage_bleu.png' %}">
         <p class="text-center"><strong>{% trans "Technical resources" %}</strong></p>
         <p class="center">
-            {% blocktrans %}
+            {% blocktrans trimmed %}
             Discover the resources that will allow you to progress, discover new tools and learn new techniques.
             {% endblocktrans %}
         </p>
