--- a/platform_code/home/templates/home/profile-my-ressources.html
+++ b/platform_code/home/templates/home/profile-my-ressources.html
@@ -45,14 +45,14 @@
             {% endfor %}
             {% else %}
             <p class="margin-50" id="no-resources-message"
-            >{% blocktrans %}
+            >{% blocktrans trimmed %}
                 You do not have selected resources as favorite yet. You can do this in the next tab or during the
                 evaluation by clicking on the small icon next to the resources.
              {% endblocktrans %}
             </p>
             {% endif %}
             <p class="margin-50 display-none" id="no-resources-message-temp"
-            >{% blocktrans %}
+            >{% blocktrans trimmed %}
                 You do not have selected resources as favorite yet. You can do this in the next tab or during the
                 evaluation by clicking on the small icon next to the resources.
              {% endblocktrans %}
