--- a/platform_code/home/templates/home/registration/password_reset_confirm.html
+++ b/platform_code/home/templates/home/registration/password_reset_confirm.html
@@ -13,7 +13,7 @@
     </form>
     {% else %}
     <p>
-        {% blocktrans %}
+        {% blocktrans trimmed %}
         The password reset link was invalid, possibly because it has already been used.
         Please request a new password reset.
         {% endblocktrans %}
