--- a/platform_code/home/templates/home/signup.html
+++ b/platform_code/home/templates/home/signup.html
@@ -22,7 +22,7 @@
                     </div>
                     {% if forloop.counter == 4 %}
                     <div class="help-tip help-tip-right remove-smartphone-screen">
-                        <p>{% blocktrans %}
+                        <p>{% blocktrans trimmed %}
                             Your password must contain at least 8 characters, with at least one number and one letter
                             {% endblocktrans %}
                         </p>
