--- a/platform_code/assessment/templates/assessment/organisation/member/add-member-modal.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/add-member-modal.html
@@ -13,7 +13,7 @@
             <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class="modal-body margin-auto">
-            <p>{% blocktrans %}
+            <p>{% blocktrans trimmed %}
                 You can add another user to your organisation. If the user does not already have an account on
                 the platform, an invitation email will be sent to him to join your organisation.
                 {% endblocktrans %}
@@ -21,24 +21,24 @@
             <p>{% trans "You can chose the rights you want to give to the user:" %}</p>
             <ul class="inline-padding">
                 <li class="li-with-disc">
-                    {% blocktrans %}
+                    {% blocktrans trimmed %}
                     <strong>Read-only user</strong>: the read-only user can only consult
                     the evaluations, he cannot create, edit or delete one.
                     {% endblocktrans %}
                 </li>
                 <li class="li-with-disc">
-                    {% blocktrans %}
+                    {% blocktrans trimmed %}
                     <strong>Editor</strong>: the editor can create, modify or delete evaluations.
                     {% endblocktrans %}
                 </li>
                 <li class="li-with-disc">
-                    {% blocktrans %}
+                    {% blocktrans trimmed %}
                     <strong>Admin</strong>: the admin user can create, modify or delete
                     evaluations. He also can edit rights of other members and add/remove users to the organisation.
                     {% endblocktrans %}
                 </li>
             </ul>
-            <p>{% blocktrans %}
+            <p>{% blocktrans trimmed %}
                 <strong>Note that you cannot remove an user with admin rights from the organisation, neither
                 change its rights. It is recommended to add user with edit rights</strong>.
                 {% endblocktrans %}</p>
