--- a/platform_code/home/templates/home/registration/password_reset_done.html
+++ b/platform_code/home/templates/home/registration/password_reset_done.html
@@ -4,14 +4,14 @@
 {% block content %}
 <div class="evaluation-title container">
     <p>
-        {% blocktrans %}
+        {% blocktrans trimmed %}
         We've emailed you instructions for setting your password, if an account exists with the email you
         entered.
         {% endblocktrans %}
         {% trans "You should receive them shortly." %}
     </p>
     <p>
-        {% blocktrans %}
+        {% blocktrans trimmed %}
         If you don't receive an email, please make sure you've entered the address you registered with, and
         check your spam folder.
         {% endblocktrans %}
