--- a/platform_code/home/templates/home/settings-delete.html
+++ b/platform_code/home/templates/home/settings-delete.html
@@ -29,7 +29,7 @@
                 <button class="close" data-dismiss="modal" type="button">&times;</button>
             </div>
             <div class="modal-body">
-                <p>{% blocktrans %}
+                <p>{% blocktrans trimmed %}
                     The organisations you are the only admin member will be deleted, as well as their
                     evaluations.
                     {% endblocktrans %}
