--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -33,68 +33,7 @@
         <!--Beta banner-->
         <div class="ribbon"><span>Beta</span></div>
         <nav class="navbar navbar-expand-lg  is-fixed-top">
-            <div class="container">
-                <a class="navbar-brand white-color" href="{% url 'home:homepage' %}" title="home">
-                    <img class="logo-navbar" src="{% static 'image/Substra_Foundation_Logo_horizontal_fond.png' %}">
-                </a>
-                <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
-                    class="navbar-toggler icon-navbar" data-target="#navbarResponsive" data-toggle="collapse"
-                    id="navbar-button" type="button">
-                    <i aria-hidden="true" class="fa fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        {% if user.is_authenticated %}
-                        {% if user.is_staff %}
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" href="{% url 'admin:index' %}">
-                                {% trans "Admin" %}
-                            </a>
-                        </li>
-                        {% endif %}
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" href="{% url 'home:user-profile' %}">
-                                {% trans "My dashboard" %}
-                            </a>
-                        </li>
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" href="{% url 'home:resources' %}">
-                                {% trans "Resources" %}
-                            </a>
-                        </li>
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" href="{% url 'home:faq' %}">
-                                {% trans "FAQ" %}
-                            </a>
-                        </li>
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" href="{% url 'home:logout' %}">
-                                {% trans "Logout" %}
-                            </a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" href="{% url 'home:faq' %}">
-                            {% trans "FAQ" %}
-                            </a>
-                        </li>
-                        {% if request.get_full_path|need_login_page %}
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" href="{% url 'home:login' %}">
-                            {% trans "Login" %}
-                            </a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item navbar-item">
-                            <a class="nav-link" data-target="#modal-login-user" data-toggle="modal"
-                                href="{% url 'home:homepage' %}">{% trans "Login" %}
-                            </a>
-                        </li>
-                        {% endif %}
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
+            {% include "navbar.html" %}
         </nav>
     </header>
 
@@ -115,43 +54,7 @@
 
     <!-- Footer -->
     <footer class="py-2 footer">
-        <div class="larger-small-screen-absolute-position white-color partnership-footer">
-            <p class="margin-auto center text-partnership">{% trans "With the support of " %}
-            <a href="https://dataforgood.fr/"
-               title="https://dataforgood.fr/"
-               class="link-with-border"
-               target="_blank">Data for Good.</a>
-            </p>
-            <a href="https://dataforgood.fr/"
-               title="https://dataforgood.fr/"
-               target="_blank">
-                <img alt="Data for Good logo"
-                 class="img-fluid d-block mx-auto logo-d4g margin-10"
-                 src="{% static 'image/logo-d4g-white.png' %}">
-            </a>
-            <p><strong>DATA FOR GOOD</strong></p>
-        </div>
-        <div class="col-md-3 col-md-3-footer">
-            {% if user.is_authenticated %}
-            <a class="link-with-border" href="{% url 'home:logout' %}">{% trans "Logout" %}</a>
-            {% else %}
-            <a class="link-with-border" href="{% url 'home:signup' %}">{% trans "Sign up" %}</a><br>
-            <a class="link-with-border" href="{% url 'home:login' %}">{% trans "Login" %}</a>
-            {% endif %}
-        </div>
-        <div class="col-md-3 col-md-3-footer">
-            <a class="link-with-border" href="{% url 'home:faq' %}">{% trans "FAQ" %}</a>
-        </div>
-        <div class="col-md-3 col-md-3-footer">
-            <a class="link-with-border" href="{% url 'home:legal-notices' %}">{% trans "Legal notices" %}</a>
-        </div>
-        <div class="col-md-3 col-md-3-footer">
-            <a class="fa fa-icon-footer fa-twitter" href="https://twitter.com/Substra_org" target="_blank"></a>
-            <a class="fa fa-icon-footer fa-linkedin" href="https://www.linkedin.com/company/substra/"
-                target="_blank"></a>
-            <a class="fa fa-icon-footer fa-github" href="https://github.com/SubstraFoundation" target="_blank"></a>
-            <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@substra.org" target="_blank"></a>
-        </div>
+        {% include "footer.html" %}
     </footer>
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
