--- a/platform_code/assessment/templates/assessment/evaluation.html
+++ b/platform_code/assessment/templates/assessment/evaluation.html
@@ -32,10 +32,10 @@
     {% if organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
     <ul id='listTitle' class="no-padding-inline-start-smartphone">
         <li class="flex">
-            <h1 class="h1-section h1-margin-breadcrumbs object-linked margin-bottom-smartphone-30 overflow-auto"
+            <h1 class="h1-section h1-margin-breadcrumbs flex object-linked margin-bottom-smartphone-30 overflow-auto"
                 id="evaluationName">
                 <div>{{ evaluation.name }}</div>
-                <button class="btn btn-primary small-btn hidden-div remove-smartphone-screen"
+                <button class="btn btn-primary small-btn hidden-div remove-smartphone-screen margin-left-em"
                         data-target="#modal-edit{{evaluation.id}}"
                         data-toggle="modal" id="hiddenButton">
                     <i class="fa fa-edit"></i>
