--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -546,6 +546,10 @@ a[name="column-button"]:hover{
     margin: 0 15px;
 }
 
+.btn-cursor{
+    cursor: pointer;
+}
+
 /******************************************* END BUTTONS *****************************************************/
 
 /********************************************* IMAGE *********************************************************/
@@ -1183,6 +1187,14 @@ tr.spaceUnder>td {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.profile-notes-buttons{
+    width: fit-content;
+}
+
+.profile-notes-text{
+    width: 90%;
 }
 
 /*********************************************** END DIVERS ************************************************/
