--- a/platform_code/assessment/static/css/media.css
+++ b/platform_code/assessment/static/css/media.css
@@ -376,6 +376,13 @@ Inside each section, first you have, if it exists:
     .margin-10-new-eval-button {
         margin-top: 10px;
     }
+
+    .profile-notes-buttons {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
 }
 
 /* navbar */
