--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -4,6 +4,14 @@
 {% load i18n %}
 {% load markdownify %}
 
+{% if messages %}
+<ul class="messages margin-3em">
+    {% for message in messages %}
+    <li class=" alert alert-{{ message.tags }}">{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 {% for section in page_obj %}
     {% if not section.fetch %}
         <button class="btn-new top-section" disabled>New</button>
